# donkey

HandwritingIME/: Config.java  HandwritingData.java  HandwritingIME.java  WidgetInputView.java  skb_pad_left.xml
RingBuffer/: ringbuffer.h  ringbuffer_float.c  ringbuffer_float.h  typedef.h
auto_test_factory/: .sconsign.dblite  Android.mk  SConstruct  TODO  backlight_cmd.c  backlight_cmd.h  bluetooth_cmd.c  bluetooth_cmd.h  cam_data.h  camera1_cmd.c  camera1_cmd.h  camera_cmd.c  camera_cmd.h  cft_cmd.c  cft_cmd.h  charge_cmd.c  charge_cmd.h  cmd_common.h  cmd_listener.c  cmd_listener.h  echoloop2_cmd.c  echoloop2_cmd.h  echoloop_cmd.c  echoloop_cmd.h  flashlight_cmd.c  flashlight_cmd.h  fm_cmd.c  fm_cmd.h  getoption_cmd.c  getoption_cmd.h  gsensor_cmd.c  gsensor_cmd.h  headset_cmd.c  headset_cmd.h  keybl_cmd.c  keybl_cmd.h  keypress_cmd.c  keypress_cmd.h  lcd_cmd.c  lcd_cmd.h  (+38 more)
factorykit/: .sconsign.dblite  Android.mk  README  SConstruct  atv_test.c  atv_test.h  backlight_test_case.c  backlight_test_case.h  bluetooth_test.c  bluetooth_test.h  camera_test_case.c  camera_test_case.h  charger_test.c  charger_test.h  common.c  common.h  eng_wav.h  fk_config.h  fk_config_expat_xml.c  fk_config_expat_xml.h  fk_globals.c  fk_globals.h  fk_sqlite.c  fk_sqlite.h  fm_test.c  fm_test.h  gps_test.c  gps_test.h  gsensor_test.c  (+49 more)
hwinfo_tools/newbuilder/: Makefile.in  TODO  config.h.in  configure  configure.in
hwinfo_tools/newbuilder/autom4te.cache/: output.1  requests  traces.0  traces.1
hwinfo_tools/newbuilder/src/: .sconsign.dblite  Makefile.am  Makefile.in  SConstruct  TODO  hwinfo.h  hwinfo_build.h  hwinfo_build_sprd.c  hwinfo_build_sprd.h  hwinfo_config_gkey_parser.c  hwinfo_config_gkey_parser.h  hwinfo_config_ini_parser.c  hwinfo_config_ini_parser.h  hwinfo_config_parser.h  hwinfo_parser.c  hwinfo_utils.c  hwinfo_utils.h  ini_builder.h  ini_builder_list.c  ini_builder_list.h  ini_parser.c  ini_parser.h  main.c  main.conf  main2.conf  typedef.h
(+379 files in other folders)
